<resources>
    <string name="app_name">AccentureDemoApp</string>
    <string name="dev_name">Vassilis PIgadas</string>
    <string name="login_title">Login to your account</string>
    <string name="login_forgot">Forgot your password?</string>
    <string name="login_btn_label">Login</string>
    <string name="login_edit_email_hint">Email address</string>
    <string name="login_edit_password_hint">Password</string>
</resources>