<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <ImageView
        android:id="@+id/login_back_btn"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:padding="10dp"
        android:src="@drawable/ic_round_arrow_back_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/login_title"
        android:textColor="@color/txtColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/login_edit_username_container"
        app:layout_constraintTop_toBottomOf="@id/login_back_btn"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_edit_username_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_edit_email_hint"
        app:boxBackgroundColor="#edf1f5"
        app:layout_constraintBottom_toTopOf="@id/login_edit_password_container"
        app:layout_constraintTop_toBottomOf="@id/login_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_edit_username_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_edit_password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/login_edit_password_hint"
        app:boxBackgroundColor="#edf1f5"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@id/login_btn_login"
        app:layout_constraintTop_toBottomOf="@id/login_edit_username_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_edit_password_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:foregroundTint="@color/black"
        android:text="@string/login_btn_label"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/login_forgot"
        app:layout_constraintTop_toBottomOf="@id/login_edit_password_container" />

    <TextView
        android:id="@+id/login_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center"
        android:paddingStart="24dp"
        android:paddingTop="12dp"
        android:paddingEnd="24dp"
        android:paddingBottom="12dp"
        android:text="@string/login_forgot"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintLeft_toLeftOf="@id/login_btn_login"
        app:layout_constraintRight_toRightOf="@id/login_btn_login"
        app:layout_constraintTop_toBottomOf="@id/login_btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>